corrected spacing

--- a/src/Components/Instructions/Instructions.css
+++ b/src/Components/Instructions/Instructions.css
@@ -1,3 +1,4 @@
-li {
-    list-style: none;
+ul {
+    list-style-type: none;
+    padding-left: 0px;
 }
